--- a/iOS/example/Podfile
+++ b/iOS/example/Podfile
@@ -7,5 +7,6 @@ target 'GNI18N-iOS-Demo' do
 
   # Pods for GNI18N-iOS-Demo
   pod 'WKWebViewJavascriptBridge', '~> 1.2.0'
+  pod 'SwiftyUserDefaults', '~> 5.0'
 
 end
