--- a/iOS/example/Podfile
+++ b/iOS/example/Podfile
@@ -4,9 +4,6 @@ platform :ios, '13.0'
 target 'GNI18N-iOS-Demo' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
-
-  # Pods for GNI18N-iOS-Demo
-  pod 'WKWebViewJavascriptBridge', '~> 1.2.0'
-  pod 'SwiftyUserDefaults', '~> 5.0'
-
+  
+  pod 'GNI18N', :path => '../'
 end
